--- a/packages/backoffice/package.json
+++ b/packages/backoffice/package.json
@@ -4,19 +4,17 @@
   "private": true,
   "author": "Romain Lenzotti",
   "dependencies": {
-    "@project/shared": "1.0.0",
-    "axios": "0.21.1",
-    "web-vitals": "^0.2.4"
+    "@project/config": "1.0.0",
+    "@project/shared": "1.0.0"
   },
-  "devDependencies": {
-
-  },
+  "devDependencies": {},
   "scripts": {
     "start": "yarn craco start",
     "build": "yarn craco build",
     "test": "yarn craco test",
     "lint:fix": "yarn lint --fix",
-    "lint": "yarn eslint --config .eslintrc --cache --quiet ./src/**/*.js"
+    "lint": "yarn eslint --config .eslintrc --cache --quiet \"./src/**/*.{ts,tsx}\"",
+    "prettier:fix": "yarn prettier \"{src,test}/**/*.{ts,tsx}\" --write"
   },
   "browserslist": {
     "production": [
