--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -12,23 +12,24 @@
     "test": "yarn test:lint && yarn test:coverage",
     "test:unit": "cross-env NODE_ENV=test jest",
     "test:coverage": "yarn test:unit",
-    "test:lint": "eslint src --ext .ts",
-    "test:lint:fix": "eslint src --ext .ts --fix",
-    "prettier": "prettier '{src,test}/**/*.ts' --write"
+    "test:lint": "yarn eslint src --ext .ts",
+    "test:lint:fix": "yarn eslint src --ext .ts --fix",
+    "prettier:fix": "yarn prettier \"{src,test}/**/*.ts\" --write"
   },
   "dependencies": {
-    "@tsed/ajv": "^6.24.0",
-    "@tsed/common": "^6.24.0",
-    "@tsed/core": "^6.24.0",
-    "@tsed/di": "^6.24.0",
-    "@tsed/exceptions": "^6.24.0",
-    "@tsed/json-mapper": "^6.24.0",
-    "@tsed/mongoose": "^6.24.0",
-    "@tsed/passport": "^6.24.0",
-    "@tsed/platform-express": "^6.24.0",
-    "@tsed/schema": "^6.24.0",
-    "@tsed/swagger": "^6.24.0",
-    "@tsed/formio": "^6.24.0",
+    "@tsed/ajv": "6.26.1",
+    "@tsed/async-hook-context": "6.26.1",
+    "@tsed/common": "6.26.1",
+    "@tsed/core": "6.26.1",
+    "@tsed/di": "6.26.1",
+    "@tsed/exceptions": "6.26.1",
+    "@tsed/json-mapper": "6.26.1",
+    "@tsed/mongoose": "6.26.1",
+    "@tsed/passport": "6.26.1",
+    "@tsed/platform-express": "6.26.1",
+    "@tsed/schema": "6.26.1",
+    "@tsed/swagger": "6.26.1",
+    "@tsed/formio": "6.26.1",
     "ajv": "^7.0.4",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
@@ -47,7 +48,7 @@
     "@tsed/cli-plugin-jest": "2.8.1",
     "@tsed/cli-plugin-mongoose": "2.8.1",
     "@tsed/cli-plugin-passport": "2.8.1",
-    "@tsed/testing-mongoose": "^6.24.0",
+    "@tsed/testing-mongoose": "6.26.1",
     "@types/compression": "^1.7.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.9",
@@ -59,17 +60,11 @@
     "@types/node": "^14.14.22",
     "@types/passport": "^1.0.5",
     "@types/supertest": "^2.0.10",
-    "@typescript-eslint/eslint-plugin": "^4.14.2",
-    "@typescript-eslint/parser": "^4.14.2",
     "concurrently": "^5.3.0",
-    "eslint": "^7.19.0",
-    "eslint-config-prettier": "^7.2.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "husky": "^4.3.8",
+    "husky": "^5.0.9",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.3",
     "nodemon": "^2.0.7",
-    "prettier": "^2.2.1",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.0",
     "ts-node": "^9.1.1",
