--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -21,7 +21,8 @@
     "@tsed/yarn-workspaces": "1.15.0",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.6",
-    "enzyme-to-json": "3.4.4"
+    "enzyme-to-json": "3.4.4",
+    "postcss-nested": "4.2.3"
   },
   "peerDependencies": {}
 }
