--- a/packages/tailwind/package.json
+++ b/packages/tailwind/package.json
@@ -19,7 +19,8 @@
     "tailwind-config-viewer": "^1.3.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "tailwindcss-inset": "1.0.0",
-    "tailwindcss-transforms": "2.2.0"
+    "tailwindcss-transforms": "2.2.0",
+    "tailwind-bootstrap-grid": "3.1.0"
   },
   "peerDependencies": {}
 }
