--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "husky": "5.0.6",
     "lint-staged": "10.5.3",
     "cross-env": "7.0.3",
-    "webpack": "4.44.2"
+    "webpack": "4.44.2",
+    "history": "5.0.0",
+    "connected-react-router": "6.8.0"
   },
   "workspaces": {
     "packages": [
