--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -14,10 +14,12 @@
   "dependencies": {
     "classnames": "2.2.6",
     "connected-react-router": "6.8.0",
-    "history": "^4.9.0",
-    "lodash": "^4.17.20",
+    "history": "4.9.0",
+    "lodash": "4.17.20",
     "prop-types": "15.7.2",
     "react-redux": "7.2.2",
+    "react-router": "5.2.0",
+    "react-router-dom": "5.2.0",
     "redux": "4.0.5",
     "redux-thunk": "2.3.0"
   },
