feat(backoffice): Create hooks and views to manage forms with formiojs

--- a/package.json
+++ b/package.json
@@ -24,42 +24,43 @@
   },
   "react-table": "^7.6.3",
   "dependencies": {
-    "@tsed/redux-utils": "^1.1.5",
-    "@tsed/react-formio": "^1.1.5",
-    "@tsed/tailwind-formio": "^1.1.5",
-    "lerna": "3.22.1",
-    "pm2": "4.5.1",
+    "@tsed/react-formio": "^1.6.1",
+    "@tsed/redux-utils": "^1.6.1",
+    "@tsed/tailwind-formio": "^1.6.1",
     "classnames": "2.2.6",
     "connected-react-router": "6.8.0",
+    "file-saver": "2.0.5",
     "formiojs": "^4.12.7",
+    "lerna": "3.22.1",
     "lodash": "4.17.20",
+    "pm2": "4.5.1",
     "prop-types": "15.7.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-formio": "4.3.0",
     "react-redux": "7.2.2",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
-    "redux-thunk": "2.3.0",
-    "react-formio": "4.3.0",
     "react-table": "7.6.3",
-    "react-redux-toastr": "7.6.5",
+    "react-toastify": "7.0.3",
     "react-use": "17.1.1",
+    "redux-thunk": "2.3.0",
     "web-vitals": "^0.2.4"
   },
   "devDependencies": {
-    "@types/prop-types": "15.7.3",
+    "@types/classnames": "2.2.11",
     "@types/ejs": "3.0.5",
+    "@types/enzyme": "3.10.8",
+    "@types/file-saver": "^2.0.1",
+    "@types/jest": "26.0.20",
+    "@types/lodash": "4.14.168",
     "@types/node": "^14.14.20",
+    "@types/prop-types": "15.7.3",
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
+    "@types/react-redux": "7.1.16",
     "@types/react-router": "5.1.11",
     "@types/react-router-dom": "5.1.7",
-    "@types/lodash": "4.14.168",
-    "@types/jest": "26.0.20",
-    "@types/react-redux": "7.1.16",
-    "@types/react-redux-toastr": "7.6.0",
-    "@types/classnames": "2.2.11",
-    "@types/enzyme": "3.10.8",
     "@types/react-table": "7.0.28",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
     "@typescript-eslint/parser": "^2.26.0",
@@ -73,9 +74,10 @@
     "eslint-plugin-promise": "4.3.1",
     "eslint-plugin-react": "7.22.0",
     "eslint-plugin-standard": "5.0.0",
-    "prettier": "2.2.1",
     "husky": "5.0.9",
     "lint-staged": "10.5.3",
+    "prettier": "2.2.1",
+    "react-scripts": "4.0.1",
     "webpack": "4.44.2"
   },
   "workspaces": {
