--- a/packages/backoffice/.eslintrc
+++ b/packages/backoffice/.eslintrc
@@ -29,12 +29,14 @@
     "react/prop-types": 0,
     "react/jsx-handler-names": 0,
     "react/jsx-fragments": 0,
+    "react/display-name": 0,
     "no-unused-vars": 0,
     "react/no-unused-prop-types": 0,
     "@typescript-eslint/no-unused-vars": 0,
     "@typescript-eslint/no-explicit-any": 0,
     "@typescript-eslint/explicit-function-return-type": 0,
     "@typescript-eslint/explicit-module-boundary-types": 0,
+    "@typescript-eslint/no-empty-function": 0,
     "import/export": 0
   }
 }
