--- a/packages/backoffice/package.json
+++ b/packages/backoffice/package.json
@@ -7,11 +7,13 @@
     "@project/config": "1.0.0",
     "@project/shared": "1.0.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "cross-env": "^7.0.3"
+  },
   "scripts": {
     "start": "yarn craco start",
     "build": "yarn craco build",
-    "test": "yarn craco test",
+    "test": "cross-env CI=1 yarn craco test --coverage",
     "lint:fix": "yarn lint --fix",
     "lint": "yarn eslint --config .eslintrc --cache --quiet \"./src/**/*.{ts,tsx}\"",
     "prettier:fix": "yarn prettier \"{src,test}/**/*.{ts,tsx}\" --write"
