--- a/packages/server/.eslintrc
+++ b/packages/server/.eslintrc
@@ -15,6 +15,8 @@
    "es6": true
   },
   "rules": {
+    "@typescript-eslint/camelcase": 0,
+    "@typescript-eslint/explicit-function-return-type": 0,
     "@typescript-eslint/no-unused-vars": 2,
     "@typescript-eslint/no-var-requires": 0
   }
