--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -8,7 +8,7 @@
   "author": "Romain Lenzotti",
   "license": "MIT",
   "scripts": {
-    "test": "yarn craco test",
+    "test": "cross-env CI=1 yarn craco test --coverage",
     "lint:fix": "yarn lint --fix",
     "lint": "yarn eslint --config .eslintrc --cache --quiet \"./src/**/*.{ts,tsx}\"",
     "prettier:fix": "yarn prettier \"{src,test}/**/*.{ts,tsx}\" --write"
@@ -18,7 +18,7 @@
     "@project/config": "1.0.0"
   },
   "devDependencies": {
-
+    "cross-env": "^7.0.3"
   },
   "peerDependencies": {
 
