--- a/packages/server/tsconfig.compile.json
+++ b/packages/server/tsconfig.compile.json
@@ -10,6 +10,7 @@
     "sourceMap": true,
     "noEmit": false,
     "emitDeclarationOnly": false,
-    "inlineSources": true
+    "inlineSources": true,
+    "skipLibCheck": true
   }
 }
