fix(backoffice): Fix configuration and update @tsed/react-formio

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test:server": "lerna run test --scope=@project/server",
     "lint": "lerna run lint",
     "lint:fix": "lerna run lint:fix",
-    "prettier": "lerna run prettier",
+    "prettier": "lerna run prettier:fix",
     "build": "lerna run build --stream",
     "build:backoffice": "lerna run build --scope=@project/backoffice --stream",
     "build:server": "lerna run build --scope=@project/server --stream",
@@ -22,12 +22,11 @@
     "start:prod": "pm2-docker --raw processes.config.js --no-deamon",
     "docker:build": "yarn build && docker-compose build"
   },
-  "react-table": "^7.6.3",
   "dependencies": {
-    "@tsed/react-formio": "^1.8.5",
-    "@tsed/react-formio-container": "^1.8.5",
-    "@tsed/redux-utils": "^1.8.5",
-    "@tsed/tailwind-formio": "^1.8.5",
+    "@tsed/react-formio": "^1.8.6",
+    "@tsed/react-formio-container": "^1.8.6",
+    "@tsed/redux-utils": "^1.8.6",
+    "@tsed/tailwind-formio": "^1.8.6",
     "classnames": "2.2.6",
     "connected-react-router": "6.8.0",
     "file-saver": "2.0.5",
@@ -38,7 +37,6 @@
     "prop-types": "15.7.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "react-formio": "4.3.0",
     "react-redux": "7.2.2",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
